# angel-service

./: .gitignore  CMakeLists.txt  README.md  global.hpp  handlers.hpp  helper.hpp  httpworker.cpp  main.cpp
handlers/: handle_execution.cpp  handle_find_task.cpp  handle_task_list.cpp  handlers.hpp
html/: index.html
testscripts/: simple.json
trip/: router.hpp
